# AMD.GPU.ProfileManager

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
data/: battlefield6.json  fsr_tech_preview.json
data/driver/: radeon-25.5.1.json  radeon-25.5.2.json  radeon-25.6.1.json  radeon-25.6.2.json  radeon-25.6.3.json  radeon-25.8.1.json  radeon-fsrtechdemo.json
src/: CMakeLists.txt
src/include/: amd_gpu_profilemanager_application.h  amd_gpu_profilemanager_application_combined.h  amd_gpu_profilemanager_area.h  amd_gpu_profilemanager_common.h  amd_gpu_profilemanager_database_type.h  amd_gpu_profilemanager_db.h  amd_gpu_profilemanager_profile.h  amd_gpu_profilemanager_property.h  amd_gpu_profilemanager_use.h  amd_gpu_profilemanager_utils.h
src/src/: amd_gpu_profilemanager_application.cpp  amd_gpu_profilemanager_application_combined.cpp  amd_gpu_profilemanager_area.cpp  amd_gpu_profilemanager_common.cpp  amd_gpu_profilemanager_db.cpp  amd_gpu_profilemanager_profile.cpp  amd_gpu_profilemanager_property.cpp  amd_gpu_profilemanager_use.cpp  amd_gpu_profilemanager_utils.cpp
src_app/: CMakeLists.txt  app_info.h  main.cpp  whitelist_preset_item.h  whitelist_preset_manager.cpp  whitelist_preset_manager.h  window_details.cpp  window_details.h  window_main.cpp  window_main.h
